<resources>
    <string name="app_name">LostFound</string>

    <string name="error_valid_email_password">Wrong Email or Password</string>
    <string name="error_message_email">Enter Valid Email</string>
    <string name="hint_username">Username</string>
    <string name="hint_firstname">First Name</string>
    <string name="hint_middlename">Middle Name</string>
    <string name="hint_lastname">Last Name</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="button_text_login">LOGIN</string>
    <string name="button_text_register">REGISTER</string>
    <string name="no_account">No account yet? Sign up now</string>
    <string name="already_member">Already registered? Login</string>


    <string name="text_accounts">All Accounts</string>
    <string name="text_login">Login</string>
    <string name="text_register">Register</string>
    <string name="error_message_username">Enter Username</string>
    <string name="error_message_firstname">Enter First Name</string>
    <string name="error_message_lastname">Enter Last Name</string>
    <string name="error_message_password">Enter Password</string>
    <string name="success_message">Registration Successful</string>
    <string name="error_email_exists">Email Already Exists</string>
    <string name="error_password_match">Password Does Not Matches</string>
    <string name="action_settings">Settings</string>
    <string name="text_hello">Hello,</string>
    <string name="text_title">Android Tutorials Hub</string>

    <string name="heading_title">Lost and Found</string>
    <string name="register">Register</string>
    <string name="report">Report</string>
    <string name="found">Found</string>
    <string name="lost">Lost</string>

    <string name="item">Lost Item</string>
    <string name="item_found">Found Item</string>
    <string name="details">Details</string>
    <string name="date_filed">Date Filed</string>
    <string name="date_loss">Date Loss</string>
    <string name="date_found">Date Found</string>
    <string name="item_type">Type</string>
    <string name="location">Location</string>
    <string name="location_details">Location details</string>
    <string name="brand">Brand</string>
    <string name="category">Category</string>
    <string name="contact_info">Contact Information</string>
    <string name="remarks">Remarks</string>
    <string name="success_report">Report successfully submitted</string>
    <string name="error_forms">Complete required fields</string>
    <string name="categories">Select Category</string>
    <string name="find">Find Item</string>
    <string name="action_search">Search</string>
    <string name="login_headline">Login</string>
</resources>
