<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="fill_parent"
android:layout_height="fill_parent"
android:paddingLeft="20dp"
android:paddingRight="20dp"
android:paddingTop="20dp"
android:paddingBottom="20dp"
android:orientation="vertical"
tools:context=".MainActivity"
android:gravity="center"
android:textAlignment="center">

    <android.support.v7.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:gravity="center"
        android:orientation="vertical">

        <android.support.v7.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/report"
            android:textSize="40sp" />

    </android.support.v7.widget.LinearLayoutCompat>

<Button
    android:id="@+id/buttonLost"
    android:text="@string/lost"
    android:layout_marginTop="30dp"
    android:layout_marginBottom="30dp"
    android:layout_width="match_parent" android:layout_height="wrap_content"/>

<Button
    android:id="@+id/buttonFound"
    android:text="@string/found"
    android:layout_width="match_parent" android:layout_height="wrap_content"/>

</LinearLayout>